Use Apache Ant DirectoryScanner for glob path resolution
Signed-off-by: Srikanth Padakanti <srikanth_padakanti@apple.com>